force-app/main/default/objects/Rattachement_Transporteur__c/Rattachement_Transporteur__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction entre le point relais et la plateforme</description>
    <label>Rattachement transporteur</label>
    <nameField>
        <label>Référence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rattachements transporteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>