force-app/main/default/objects/Rattachement_Transporteur__c/fields/Coordinateur_logistique__c.field-meta.xml
<CustomField>
    <fullName>Coordinateur_logistique__c</fullName>
    <formula>Depot__r.Coordinateur_logistique__r.FirstName &amp; &quot; &quot; &amp; Depot__r.Coordinateur_logistique__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinateur logistique</label>
    <type>Text</type>
</CustomField>