force-app/main/default/objects/Rattachement_Transporteur__c/fields/Date_de_deploiement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_deploiement__c</fullName>
    <label>Date de déploiement</label>
    <type>Date</type>
</CustomField>