force-app/main/default/objects/Rattachement_Transporteur__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <label>Dépôt</label>
    <referenceTo>Plateforme__c</referenceTo>
    <relationshipLabel>Rattachements transporteurs</relationshipLabel>
    <relationshipName>Rattachements_transporteurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>