force-app/main/default/objects/Rattachement_Transporteur__c/fields/Derniere_collecte__c.field-meta.xml
<CustomField>
    <fullName>Derniere_collecte__c</fullName>
    <label>Dernière collecte</label>
    <type>Date</type>
</CustomField>