force-app/main/default/objects/Rattachement_Transporteur__c/fields/Point_migre__c.field-meta.xml
<CustomField>
    <fullName>Point_migre__c</fullName>
    <label>Point migré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>