force-app/main/default/objects/Rattachement_Transporteur__c/fields/Point_relais__c.field-meta.xml
<CustomField>
    <fullName>Point_relais__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Point relais</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Agence</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transporteurs</relationshipLabel>
    <relationshipName>Transporteurs1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>