force-app/main/default/objects/Rattachement_Transporteur__c/fields/Reference_Pudo__c.field-meta.xml
<CustomField>
    <fullName>Reference_Pudo__c</fullName>
    <formula>Point_relais__r.Reference_internationale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Réference Pudo</label>
    <type>Text</type>
</CustomField>