force-app/main/default/objects/Rattachement_Transporteur__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <description>Affiche le nom du transporteur lié à la plateforme</description>
    <formula>Depot__r.Transporteur__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transporteur</label>
    <type>Text</type>
</CustomField>